--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.5.2",
     "lucide-react": "^0.477.0",
     "next": "15.2.0",
     "next-auth": "^4.24.11",
+    "next-cloudinary": "^6.16.0",
     "next-themes": "^0.4.4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
